--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -8,3 +8,57 @@
   width: 96%;
   background-color: #282828;
 }
+
+.footer__left {
+  flex: 0.3;
+  display: flex;
+  align-items: center;
+  color: white;
+  width: 18.75rem;
+}
+
+.footer__albumLogo {
+  height: 3.75rem;
+  width: 3.75rem;
+  object-fit: contain;
+  margin-right: 1.25rem;
+}
+
+.footer__center {
+  flex: 0.4;
+  padding: 0 6.25rem;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 18.75rem;
+}
+
+.footer__green {
+  color: #1ed15e;
+}
+
+.footer__songInfo > h4 {
+  margin-bottom: 0.25rem;
+}
+
+.footer__songInfo > p {
+  font-size: 0.75rem;
+}
+
+.footer__icon:hover,
+.footer__green:hover {
+  transition: transform 0.2s ease-in-out;
+  transform: scale(1.2) !important;
+}
+.footer__right {
+  flex: 0.3;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+
+.footer__right .MuiSlider-root {
+  color: green;
+}
