--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -15,3 +15,15 @@
   padding: 0.625rem;
   margin-right: auto;
 }
+
+.sidebar__title {
+  margin-left: 0.625rem;
+  padding: 0.25rem;
+  font-size: 0.8rem;
+}
+
+.sidebar > hr {
+  border: 1px solid #282828;
+  width: 90%;
+  margin: 0.625rem auto;
+}
