--- a/src/Components/Body.css
+++ b/src/Components/Body.css
@@ -8,3 +8,28 @@
   background: linear-gradient(transparent, rgba(0, 0, 0, 1));
   background-color: rgb(91, 87, 115);
 }
+
+.body__info {
+  display: flex;
+  align-items: flex-end;
+  padding: 0.625rem;
+}
+
+.body__info > img {
+  height: 20vw;
+  margin: 0 20px;
+  box-shadow: 0 0.25rem 3.75rem rgba(0, 0, 0, 0.5);
+}
+
+.body__infoText {
+  flex: 1;
+}
+
+.body__infoText > h2 {
+  font-size: 3rem;
+  margin-bottom: 0.625rem;
+}
+
+.body__infoText > p {
+  font-size: 1rem;
+}
